--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,43 @@
 <div class="login-container">
   <h1>Login</h1>
 
-  <mat-form-field class="full-width" appearance="fill">
-    <mat-label>E-mail</mat-label>
-    <input
-      matInput
-      [errorStateMatcher]="matcher"
-      [formControl]="emailFormControl"
-    />
-    <mat-error *ngIf="emailFormControl.hasError('required')">
-      Preencha o e-mail
-    </mat-error>
-  </mat-form-field>
-  <mat-form-field class="full-width" appearance="fill">
-    <mat-label>Senha</mat-label>
-    <input #password type="password" matInput />
-    <mat-error *ngIf="passwordFormControl.hasError('required')">
-      Preencha o e-mail
-    </mat-error>
-  </mat-form-field>
-  <button mat-raised-button color="primary">Entrar</button>
+  <form [formGroup]="formLogin" (submit)="handleSubmit()">
+    <mat-form-field class="full-width" appearance="fill">
+      <mat-label>E-mail</mat-label>
+      <input matInput formControlName="email" />
+      <mat-error *ngIf="formLogin.get('email')?.errors?.['required']">
+        Preencha o e-mail
+      </mat-error>
+      <mat-error *ngIf="formLogin.get('email')?.errors?.['email']">
+        E-mail inválido
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field class="full-width" appearance="fill">
+      <mat-label>Senha</mat-label>
+      <input formControlName="password" type="password" matInput />
+      <mat-error *ngIf="formLogin.get('password').hasError('required')">
+        Preencha a senha
+      </mat-error>
+      <mat-error *ngIf="formLogin.get('password').hasError('minlength')">
+        A senha precisa ter no mínimo 8 caracteres
+      </mat-error>
+    </mat-form-field>
 
-  <p class="register mt-2">
-    Não tem uma conta? Cadastre grátis clicando <a href="#">aqui!</a>
-  </p>
-  <p class="forget-password">
-    Esqueceu sua senha? Clique <a href="#">aqui</a> para alterar
-  </p>
+    <button
+      [disabled]="!formLogin.valid"
+      mat-raised-button
+      color="primary"
+      style="margin-top: 10px"
+      type="submit"
+    >
+      Entrar
+    </button>
+
+    <p class="register mt-2">
+      Não tem uma conta? Cadastre grátis clicando <a href="#">aqui!</a>
+    </p>
+    <p class="forget-password">
+      Esqueceu sua senha? Clique <a href="#">aqui</a> para alterar
+    </p>
+  </form>
 </div>
