Create market list card

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,12 @@
 <div class="container">
   <h1>Olá 😄</h1>
+
+  <h2>Suas listas de compras:</h2>
+
+  <app-list-card></app-list-card>
+  <app-list-card></app-list-card>
+  <app-list-card></app-list-card>
+  <app-list-card></app-list-card>
+  <app-list-card></app-list-card>
+  <app-list-card></app-list-card>
 </div>
