--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,9 +20,9 @@ body {
   display: block;
   margin: 0 auto;
   position: relative;
-  background: #ccc;
+  // background: #ccc;
   height: 100%;
-  box-shadow: 0 0 5px #555;
+  // box-shadow: 0 0 5px #555;
   padding: 10px 20px;
 }
 
