Create show market list

--- a/src/app/components/list-card/list-card.component.html
+++ b/src/app/components/list-card/list-card.component.html
@@ -1,4 +1,4 @@
-<div class="market-list-card">
+<div routerLink="/lista/1" class="market-list-card">
   <h1 class="list-card-title">Título da lista</h1>
 
   <ul>
