--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,11 @@
 
   <h2>Suas listas de compras:</h2>
 
+  <button mat-raised-button class="ma-1" color="primary">
+    <mat-icon>add</mat-icon>
+    Add
+  </button>
+
   <app-list-card></app-list-card>
   <app-list-card></app-list-card>
   <app-list-card></app-list-card>
