--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,24 @@ select,
 .full-width {
   width: 100%;
 }
+
+.ma-1 {
+  margin: 10px !important;
+}
+
+.ma-2 {
+  margin: 20px !important;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.all-center {
+  align-items: center;
+  justify-content: center;
+}
+
+.vertical-center {
+  align-items: center;
+}
