--- a/src/app/lists/show-list/show-list.component.html
+++ b/src/app/lists/show-list/show-list.component.html
@@ -1,9 +1,17 @@
 <div class="container">
   <h1>Título da lista</h1>
 
+  <button mat-raised-button class="ma-1" color="warn" routerLink="/">
+    <mat-icon>keyboard_return</mat-icon>
+    Voltar
+  </button>
+
   <mat-selection-list #shoes class="list-container">
-    <mat-list-option *ngFor="let shoe of typesOfShoes">
-      {{ shoe }}
+    <mat-list-option *ngFor="let item of items">
+      <app-list-item
+        (deleteItemEvent)="deleteItem(item)"
+        [item]="item"
+      ></app-list-item>
     </mat-list-option>
   </mat-selection-list>
 </div>
