--- a/src/app/components/list-card/list-card.component.html
+++ b/src/app/components/list-card/list-card.component.html
@@ -38,4 +38,11 @@
       5
     </span>
   </div>
+
+  <mat-icon
+    (click)="handleDelete($event)"
+    title="Apagar lista"
+    class="delete-button-card"
+    >delete</mat-icon
+  >
 </div>
