--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,12 @@
 
   <h2>Suas listas de compras:</h2>
 
-  <button mat-raised-button class="ma-1" color="primary">
+  <button
+    routerLink="criar-lista"
+    mat-raised-button
+    class="ma-1"
+    color="primary"
+  >
     <mat-icon>add</mat-icon>
     Add
   </button>
