--- a/src/app/lists/show-list/show-list.component.scss
+++ b/src/app/lists/show-list/show-list.component.scss
@@ -31,3 +31,15 @@ ul {
     display: block;
   }
 }
+
+.input-title-editor {
+  width: auto;
+  background: transparent;
+  border: none;
+  font-size: 24px;
+
+  &:active,
+  &:focus {
+    outline: none;
+  }
+}
