--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
   <form [formGroup]="formLogin" (submit)="handleSubmit()">
     <mat-form-field class="full-width" appearance="fill">
       <mat-label>E-mail</mat-label>
-      <input matInput formControlName="email" />
+      <input type="email" matInput formControlName="email" />
       <mat-error *ngIf="formLogin.get('email')?.errors?.['required']">
         Preencha o e-mail
       </mat-error>
