--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,10 +13,9 @@
     Add
   </button>
 
-  <app-list-card></app-list-card>
-  <app-list-card></app-list-card>
-  <app-list-card></app-list-card>
-  <app-list-card></app-list-card>
-  <app-list-card></app-list-card>
-  <app-list-card></app-list-card>
+  <app-list-card
+    *ngFor="let list of lists"
+    [listTitle]="list.title"
+    [listItems]="list.items"
+  ></app-list-card>
 </div>
