--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -7,7 +7,7 @@
 
   <mat-checkbox
     #checkBought
-    [checked]="item.bought"
+    [checked]="item.done"
     (change)="handleChange(checkBought.checked)"
   >
     {{ item.name }}
