--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -10,6 +10,6 @@
     [checked]="item.done"
     (change)="handleChange(checkBought.checked)"
   >
-    {{ item.name }}
+    {{ item.name }} x {{ item.qty }}
   </mat-checkbox>
 </div>
