--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,8 @@
     </button>
 
     <p class="register mt-2">
-      Não tem uma conta? Cadastre grátis clicando <a href="#">aqui!</a>
+      Não tem uma conta? Cadastre grátis clicando
+      <a routerLink="/criar-conta">aqui!</a>
     </p>
     <p class="forget-password">
       Esqueceu sua senha? Clique <a href="#">aqui</a> para alterar
