--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Olá {{ username }} 😄</h1>
+  <p class="logout" (click)="handleLogout()">Sair</p>
 
   <h2>Suas listas de compras:</h2>
 
