--- a/src/app/lists/show-list/show-list.component.html
+++ b/src/app/lists/show-list/show-list.component.html
@@ -8,6 +8,8 @@
     />
   </form>
 
+  <mat-icon title="Compartilhar" (click)="openDialog()">share</mat-icon>
+
   <form (submit)="handleSubmit()" #addItemForm [formGroup]="itemsForm">
     <mat-form-field class="full-width">
       <mat-label>Nome</mat-label>
