--- a/src/app/lists/show-list/show-list-modal.component.html
+++ b/src/app/lists/show-list/show-list-modal.component.html
@@ -1,6 +1,6 @@
 <h1>Compartilhar Lista</h1>
 
-<form [formGroup]="shareForm">
+<form [formGroup]="shareForm" (submit)="handleShare()">
   <mat-form-field class="full-width">
     <mat-label>E-mail para compartilhar</mat-label>
     <input
