Fix http service name

--- a/src/app/components/list-card/list-card.component.html
+++ b/src/app/components/list-card/list-card.component.html
@@ -43,6 +43,7 @@
     (click)="handleDelete($event)"
     title="Apagar lista"
     class="delete-button-card"
-    >delete</mat-icon
   >
+    {{ confirmDelete ? "info" : "delete" }}
+  </mat-icon>
 </div>
